name:                blockchain
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Schaefer
maintainer:          git@danielschaefer.me
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10


executable blockchain
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12
                     , text
                     , cryptonite
                     , bytestring
                     , time
                     , memory
                     , either
                     , base16-bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

