name:                blockchain-johnazoidberg
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Schaefer
maintainer:          git@danielschaefer.me
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

test-Suite test
  type:              exitcode-stdio-1.0
  main-is:           test.hs
  hs-source-dirs:    tests
  build-depends:     base
                   , QuickCheck
                   , tasty
                   , tasty-hunit
                   , tasty-quickcheck
                   , tasty-smallcheck
                   , blockchain-johnazoidberg
  default-language:  Haskell2010

library
  exposed-modules:     Blockchain.Block
                     , Blockchain.Util
  GHC-Options:         -Wall
  build-depends:       base >=4.11 && <4.12
                     , text
                     , cryptonite
                     , bytestring
                     , time
                     , memory
                     , either
                     , base16-bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable blockchain
  main-is:             Main.hs
  GHC-Options:         -Wall
  build-depends:       base >=4.11 && <4.12
                     , text
                     , cryptonite
                     , bytestring
                     , time
                     , memory
                     , either
                     , base16-bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Blockchain.Block
                     , Blockchain.Util

